prevent  editor scrolling on mobile when displaying the keyboard
Former-commit-id: 26e5e71355cd662245a3cf98eec17ecbc4ef203b

--- a/extension/ui/editor/editor.css
+++ b/extension/ui/editor/editor.css
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
